example with Spring 3.1.RC2, Tomcat 7 and XML-free configuration