@@ -64,6 +64,9 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.9</version>
+          <configuration>
+            <argLine>-XX:MaxPermSize=256M</argLine>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.eclipse.m2e</groupId>
